--- a/src/components/background/backgroundStyle.css
+++ b/src/components/background/backgroundStyle.css
@@ -1,7 +1,7 @@
  #background{
     height: 100%;
-    width: 100%;
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    width: 1878px;
+    background: linear-gradient(to top, #1b2735 0%, #090a0f 100%);
     overflow: hidden;
     position: fixed;
     z-index: -1;
